# ChangeLog for www-client/arora
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.27 2009/11/08 23:14:24 wired Exp $

  08 Nov 2009; Alex Alexander <wired@gentoo.org> arora-0.7.1.ebuild,
  arora-0.8.0.ebuild, arora-0.9.0.ebuild, arora-0.10.0.ebuild,
  arora-0.10.1.ebuild:
  updated deps wrt bug #292064, added {} to var

*arora-0.10.1 (05 Oct 2009)

  05 Oct 2009; Alex Alexander <wired@gentoo.org> +arora-0.10.1.ebuild:
  version bump

*arora-0.10.0 (03 Oct 2009)

  03 Oct 2009; Alex Alexander <wired@gentoo.org> +arora-0.10.0.ebuild:
  version bump

  03 Sep 2009; Alex Alexander <wired@gentoo.org> arora-0.9.0.ebuild:
  adjusted deps, 0.9.0 needs >=qt-*-4.5.0

*arora-0.9.0 (01 Sep 2009)

  01 Sep 2009; Alex Alexander <wired@gentoo.org> +arora-0.9.0.ebuild:
  version bump

*arora-0.8.0 (22 Jul 2009)

  22 Jul 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.6.1.ebuild,
  -arora-0.7.0.ebuild, +arora-0.8.0.ebuild:
  Version bump. Remove old.

  11 Jul 2009; Jeremy Olexa <darkside@gentoo.org> arora-0.7.1.ebuild:
  amd64 stable, bug 276041

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org> arora-0.7.1.ebuild:
  stable x86, bug 276041

  06 Jun 2009; Markus Meier <maekke@gentoo.org> arora-0.6.1.ebuild:
  amd64 stable, bug #269269

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org> arora-0.6.1.ebuild:
  stable x86, bug 269269

*arora-0.7.1 (31 May 2009)

  31 May 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.7.1.ebuild:
  Version bump. This release fixes parallel make issues, bug 271240.

  25 May 2009; Ben de Groot <yngwin@gentoo.org> arora-0.7.0.ebuild:
  Ensure compilation by enforcing make -j1, fixes bug 271240

*arora-0.7.0 (25 May 2009)

  25 May 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.7.0.ebuild:
  Version bump

  10 May 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.5.ebuild,
  -arora-0.6-r1.ebuild, arora-0.6.1.ebuild: