@@ -1,12 +1,8 @@
-DIST arora-0.10.0.tar.gz 1049187 RMD160 09a3a20951b34b898d035262ec5e88c3d9c162f5 SHA1 dee7b646a2d19e7bf602a6d7c8cdb1863e3b931f SHA256 6c7abada1571076750fdcbc1ce5fb39908f0884a33d0efeedba2915bc720a09f
 DIST arora-0.10.1.tar.gz 1064017 RMD160 bb47343d4988b86ab4abd7b2be8fe90d72429df7 SHA1 dbfa15251466d3cfc00cf0d31140cd988e1985b0 SHA256 1828cbd348d1418287b29337e1047cfc3d6c092e18691cd9c6dfc2d6535bcebd
+DIST arora-0.10.2.tar.gz 1064208 RMD160 ef61ca56087288fdafed4f7bfbe1e7178f92deb2 SHA1 843d6d3e073588b5f6164985170a3525450f6615 SHA256 7b5bdbb01dccc27776c65f7aa7e4557c5ac23b07494d935523ffce7d7cece9da
 DIST arora-0.7.1.tar.gz 896528 RMD160 31e48afa832101f0873a074cc75c8c36e89d5d66 SHA1 5dc87f5a4995c83de787969c99935b44a37818a4 SHA256 9bb09ea94672953debc87d63de5783a84d7db81ae6de8e08d7de8af9f2decaa7
-DIST arora-0.8.0.tar.gz 953605 RMD160 5a035ee6227a60b36b6e0d8095390dba04b31a49 SHA1 a596ad785f16e290bc44d76a3f7085460008e070 SHA256 5d654bf20eee3170cef19830182bdbe719b7130a0c62f833c57f555bff1f6378
-DIST arora-0.9.0.tar.gz 971987 RMD160 07370add676c7f42d359a8da0595ae261b512962 SHA1 7638571b52923987c62d51f401802ae6f6048592 SHA256 d09a1cdbb4ed2b6a81532fda206e229997deda8e68f017c0d29deb6ef4f11ec2
-EBUILD arora-0.10.0.ebuild 1994 RMD160 7ba3608d8a724cfcc048bc5d73912ef0c08fcfd5 SHA1 f859e8559fc2b8403f760dd5b4e9284fa8d252ae SHA256 066fd52877b9b1fd68f6b2b9f4e9a0ad694bbb35f0950578d8a4c57de3913c5b
-EBUILD arora-0.10.1.ebuild 2000 RMD160 fa3fde817ade8b0f4b5c3cc261d833a15c64f359 SHA1 f6532cd3ccb23d184f65d29a380fabd8cdda828d SHA256 59dc0e541f26711f5fb81524f96bb0942cc03037dbe2190e27a132f7d9c2cb5d
+EBUILD arora-0.10.1.ebuild 2032 RMD160 c5a792e97e317565264df1baca25b08d0e1f8bad SHA1 d5403046fb2c41992fa7e07de8d50d1e6d1c05fa SHA256 13fc65e4baa43f4798912f87625c93724055f93ebbd1cbfb5bed458e5b0e08df
+EBUILD arora-0.10.2.ebuild 2017 RMD160 b77770c107ddac37a949d381d31fcfd9929eab07 SHA1 e6af45d0bd2e4949093055d3c73be9b8b983ee4a SHA256 64e56b4d0d40d74dfe938ca218eaa9c6b5a05f2e1509c9c96a340a0d58121600
 EBUILD arora-0.7.1.ebuild 1660 RMD160 20a7e569cead8ce956a596fc933668f8cb59eaa0 SHA1 afac8e6e90a413669533995cebc5c462084bd377 SHA256 86cdde2efbb4ad32a848d1bfc0debfc00920740c0d1e68dcb1488cacb923e324
-EBUILD arora-0.8.0.ebuild 1932 RMD160 c4038011a183456073debb855d4afb38b598b65f SHA1 7336d01d603ee5814cc64d1b299d121d4f4d593e SHA256 1e8cf5f771e4713d434bab8ff413489ff32689b958a53f44eb66c2036ac367bb
-EBUILD arora-0.9.0.ebuild 1960 RMD160 df5d099a20634b9794125c3a3b0038e86b5ed678 SHA1 af220f55571e86d46bbe1e5ddf45574a7f15d9cf SHA256 ee4e249238c369cae6e2f4c092d28f47679ffa5c34534f737a3e67ee8c2a8f18
-MISC ChangeLog 4207 RMD160 1ba86ca326f08c014013c6b99d4883424b5fce15 SHA1 b4249f3c86c86dfcfc978514f72aa7886d234f63 SHA256 066490ddf671fddfbc1955eedbbaddcef7c5ac91231d255aaf75d3762bc93358
+MISC ChangeLog 4547 RMD160 4ad8e9e43050506154f975b2fb82c5185f398f97 SHA1 e33187764ea385adc449afdeda1837379a9a8422 SHA256 6852041e22af73ad9ea2dea9ccb14ec96bbd1614c639dc1e034b7cf7a730c5e4
 MISC metadata.xml 218 RMD160 8ac5a6b1750a457d848b8b154fcaf7ca2b8decb1 SHA1 961504d4ab445fc56ba6bd0e9fd0c81270cf252e SHA256 f28447fb1cee5de814788da71f81ac68b66b24ac81cac98456698c7ce9bcc011
