@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/arora/arora-0.10.1.ebuild,v 1.2 2009/11/08 23:14:24 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/arora/arora-0.10.1.ebuild,v 1.3 2009/12/05 21:16:37 yngwin Exp $
 
 EAPI=2
 inherit eutils qt4
@@ -14,10 +14,10 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="debug doc"
 
-RDEPEND=">=x11-libs/qt-gui-4.5.0
-	>=x11-libs/qt-sql-4.5.0
-	>=x11-libs/qt-webkit-4.5.0
-	>=x11-libs/qt-xmlpatterns-4.5.0"
+RDEPEND="=x11-libs/qt-gui-4.5*
+	=x11-libs/qt-sql-4.5*
+	=x11-libs/qt-webkit-4.5*
+	=x11-libs/qt-xmlpatterns-4.5*" # incompatible with Qt 4.6, bug 295808
 DEPEND="${RDEPEND}"
 
 ARORA_LANGS="ast ca es es_CR et_EE fr_CA gl ms nb_NO pt_BR pt_PT sr@latin sr_CS uk
