@@ -1,6 +1,15 @@
 # ChangeLog for www-client/arora
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.27 2009/11/08 23:14:24 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.29 2009/12/05 23:49:23 yngwin Exp $
+
+*arora-0.10.2 (05 Dec 2009)
+
+  05 Dec 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.10.2.ebuild:
+  Version bump. Fixes bug 295808.
+
+  05 Dec 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.8.0.ebuild,
+  -arora-0.9.0.ebuild, -arora-0.10.0.ebuild, arora-0.10.1.ebuild:
+  Remove obsolete ~arch versions. Pin 0.10.1 on Qt 4.5 (bug 295808).
 
   08 Nov 2009; Alex Alexander <wired@gentoo.org> arora-0.7.1.ebuild,
   arora-0.8.0.ebuild, arora-0.9.0.ebuild, arora-0.10.0.ebuild,
